--- a/public/assets/scss/utils/_typography.scss
+++ b/public/assets/scss/utils/_typography.scss
@@ -13,7 +13,7 @@ $font-family: (
         'fontawesome': '"Font Awesome 6 Pro"',
         'roboto': "'Roboto', sans-serif",
         'oregano': "'Oregano', cursive",
-        'charm': "'Great Vibes', cursive",
+        'charm': "'Great Vibes', sans-serif",
     )
 );
 
