--- a/public/assets/scss/utils/_colors.scss
+++ b/public/assets/scss/utils/_colors.scss
@@ -55,7 +55,7 @@ $colors: (
     'theme': (
         'primary': #0989FF,
         'secondary': #821F40,
-        'brown': #BD844C,
+        'brown': #821F40,
         'green': #678E61,
     ),
     'footer': (
