--- a/public/assets/scss/layout/pages/_slider.scss
+++ b/public/assets/scss/layout/pages/_slider.scss
@@ -1121,4 +1121,13 @@
       background-image: url('/assets/img/slider/3/banner-mobile.jpeg');
     }
   }
+
+
+  .tp-slider-title-3 {
+    font-family: 'Jost', sans-serif !important;
+  }
+
+  .tp-slider-content-3 span {
+    font-family: 'Jost', sans-serif !important;
+  }
   
