--- a/public/assets/scss/utils/_typography.scss
+++ b/public/assets/scss/utils/_typography.scss
@@ -7,7 +7,7 @@ $font-url: 'https://fonts.googleapis.com/css2?family=Jost:wght@300;400;500;600;7
 $font-family: (
     'ff': (
         'body': "'Jost', sans-serif",
-        'heading': "'Jost', sans-serif",
+        'heading': "'Roboto', sans-serif",
         'p': "'Jost', sans-serif",
         'jost': "'Jost', sans-serif",
         'fontawesome': '"Font Awesome 6 Pro"',
