--- a/public/assets/scss/layout/pages/_testimonial.scss
+++ b/public/assets/scss/layout/pages/_testimonial.scss
@@ -127,7 +127,7 @@
         }
 
         @media #{$lg}{
-            padding-right: 48px;
+            //padding-right: 48px;
         }
 
         @media #{$xs}{
