--- a/public/assets/scss/utils/_typography.scss
+++ b/public/assets/scss/utils/_typography.scss
@@ -10,7 +10,7 @@ $font-family: (
         'heading': "'Roboto', sans-serif",
         'p': "'Jost', sans-serif",
         'jost': "'Jost', sans-serif",
-        'fontawesome': '"Font Awesome 6 Pro"',
+        //'fontawesome': '"Font Awesome 6 Pro"',
         'roboto': "'Roboto', sans-serif",
         'oregano': "'Oregano', cursive",
         'charm': "'Lobster', sans-serif",
